# scoutdog.ai

./: .gitignore  README.md  Taskfile.yml  _config.yml  index.html  package.json  pnpm-lock.yaml  railway.toml  review.md  turbo.json
_layouts/: default.html
apps/backend/: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml  railway.toml
apps/backend/app/: main.py
apps/backend/app/api/v1/: dependencies.py
apps/backend/app/api/v1/endpoints/: greet.py  test.py  upload.py
apps/backend/app/auth/: jwt.py
apps/backend/app/clients/: r2.py
apps/backend/app/core/: config.py
apps/backend/app/db/: session.py
apps/backend/app/services/: greeting.py  storage.py
apps/backend/scripts/: seed_db.py
apps/backend/tests/: conftest.py
apps/backend/tests/unit/: test_greet.py  test_jwt.py  test_main.py  test_r2.py  test_session.py  test_upload.py
apps/frontend/: .env.example  .eslintrc.json  jest.config.js  jest.setup.ts  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts
apps/frontend/e2e/: example.spec.ts
apps/frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/frontend/src/app/projects/: page.tsx
apps/frontend/src/components/: Contact.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Projects.tsx
apps/frontend/src/hooks/: use-toast.ts
assets/css/: main.css  style.css
docs/: about.md  contact.md  design_system.md
prompts/: coverage.md  repomix-output.xml  transformation-prompts.md
rules/: BACKEND_RULES.md  FRONTEND_RULES.md  INFRA_RULES.md  project-goal.md
(+3 files in other folders)
